--- a/package.json
+++ b/package.json
@@ -1,41 +1,52 @@
 {
-  "name": "course-managment",
+  "name": "basic-react-setup",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/omokolataiwo/course-managment.git",
+  "repository": "https://github.com/omokolataiwo/basic-react-setup.git",
   "author": "TAIWO KOLAWOLE <kolawole.taiwo@andela.com>",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "postinstall": "npm run build",
     "build": "webpack --config webpack.config.js -p",
     "start": "cd web/public && serve",
-    "start:dev": "webpack-dev-server --config webpack.config.js --mode development"
+    "webpack:dev": "webpack-dev-server --config webpack.config.js --mode development",
+    "all": "npm-run-all --parallel lint webpack:dev",
+    "lint": "sane \"node_modules/.bin/esw web/src/*\" \"web/src\""
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "serve": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^1.0.0",
     "eslint": "^5.8.0",
-    "eslint-plugin-import": "^2.14.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-watch": "^4.0.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.5.2",
+    "husky": "^1.1.2",
+    "npm-run-all": "^4.1.3",
+    "prop-types": "^15.6.2",
     "react-dev-utils": "^6.0.5",
-    "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
+    "redux-devtools-extension": "^2.13.5",
+    "sane": "^4.0.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
