--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "env": {
     "node": true,
     "es6": true,
-    "browser": true
+    "browser": true,
+    "jest": true,
   },
   "parser": "babel-eslint",
   "rules": {
@@ -16,6 +17,7 @@
     "comma-dangle": ["error",{
       "functions": "ignore"
     }],
-    "no-shadow": "off"
+    "no-shadow": "off",
+    "import/no-named-as-default": "off"
   }
 }
