--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "webpack --config webpack.config.js -p",
     "start": "cd web/public && serve",
     "webpack:dev": "webpack-dev-server --config webpack.config.js --mode development",
-    "all": "npm-run-all --parallel lint webpack:dev",
-    "lint": "sane \"node_modules/.bin/esw web/src/*\" \"web/src\""
+    "all": "npm-run-all --parallel lint:watch webpack:dev test",
+    "lint": "node_modules/.bin/esw web/src/*",
+    "lint:watch": "sane \"node_modules/.bin/esw web/src/*\" \"web/src\"",
+    "test": "jest --watch"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
@@ -26,10 +28,15 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
@@ -41,6 +48,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.1.2",
+    "jest": "^23.6.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "react-dev-utils": "^6.0.5",
@@ -51,5 +59,18 @@
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
+  },
+  "jest": {
+    "bail": true,
+    "verbose": false,
+    "setupFiles": [
+      "<rootDir>/web/__tests__/setup/setupEnzyme.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/web/__tests__/setup/"
+    ],
+    "moduleNameMapper": {
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2|gif)$": "identity-obj-proxy"
+    }
   }
 }
