--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "build": "webpack --config webpack.config.js -p",
     "start": "cd web/public && serve",
     "webpack:dev": "webpack-dev-server --config webpack.config.js --mode development",
-    "all": "npm-run-all --parallel lint:watch webpack:dev test",
+    "all": "npm-run-all --parallel lint:watch webpack:dev \"test -- --watch\"",
     "lint": "node_modules/.bin/esw web/src/*",
     "lint:watch": "sane \"node_modules/.bin/esw web/src/*\" \"web/src\"",
-    "test": "jest --watch"
+    "test": "jest"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.1.0",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "serve": "^10.0.2"
@@ -61,6 +62,18 @@
     "webpack-dev-server": "^3.1.9"
   },
   "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "web/src/**/*.{js,jsx}"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": -10
+      }
+    },
     "bail": true,
     "verbose": false,
     "setupFiles": [
